# soul-symphony-zh

./: .gitignore  .pman  README.md  RainbowSplash.py  audio3d.py  audioHandler.py  bgm.py  camera.py  clean.py  clean2.py  config.prc  config.py  dialog.py  diffuse.py  doormanager.py  doors.json  gamepadInput.py  glyphRings.py  healthbar.py  install-pip.py  intro.py  intro2.py  intro3.py  keyboardInput.py  letterMatching.py  letters.py  letters2.py  level.py  life.py  loadingScreen.py  main.py  main.spec  minimap.py  monster1.py  monster_manager.py  monsterman.py  motionBlur.py  npc.py  null.py  parser.cfg  (+29 more)
NPCs/: npc01.bam
Scripts/: soul-symphony.lnk
ShadowCode/: love_you.py
arcade/: stage1.bam  stage1.blend  stage1.blend1
assets/: level_generator.blend  level_generator.blend1  panda3d_logo.bam  splash_window.vert
components/: door.bam  door.blend  door.blend1  portal00.bam  portal00.blend  portal00.blend1  portal00.gltf
config/: config.prc  config.yaml
graphics/: photo-1572756317709-fe9c15ced298.jfif
levels/: arcade00.bam  arcade00.blend  arcade00.blend1  arcade01.bam  arcade01.blend  arcade01.blend1  blend_model.h5  enhanced_blend_model.h5  generate_level_from_model.py  level00.bam  level00.blend  level00.blend1  level01.bam  level01.blend  level01.blend1  level02.bam  level02.blend  level02.blend1  level03.bam  level03.blend  level03.blend1  level04.bam  level04.blend  level04.blend1  level05.bam  level05.blend  level05.blend1  map00.bam  map00.blend  map00.blend1  maze00.bam  maze02.bam  maze02.blend  maze02.blend1  prep_data_from_blend.py  (+1 more)
(+281 files in other folders)
